# JrPLT.CAE

./: .gitignore  .gitmodules  ColorMixture.py  JrPLT-CR.cpp  argument.cpp  cosmos.py  display.py  expression.cpp  font.py  forward.py  game.py  geometry.py  image.py  imatter.py  info.rkt  main.cpp  matter.py  misc.py  plane.py  sdl.cpp  stdio.cpp  text.py  universe.py  variables.cpp  world.py
cpp/: BigBang.cpp  CMakeLists.txt  CMakePresets.json  FontBrowser.cpp  Gallery.cpp  color_mixture.cpp  color_mixture.hpp  color_wheel.cpp  color_wheel.hpp  diffusion.cpp  diffusion.hpp  game_of_life.cpp  game_of_life.hpp  info.rkt  paddleball.cpp  paddleball.hpp  rainbow.cpp  rainbow.hpp  random_walk.cpp  random_walk.hpp  rgb_blocks.cpp  rgb_blocks.hpp  self_avoid_walk.cpp  self_avoid_walk.hpp  shape.hpp
cpp/STEMA/: josephus_circle.cpp
cpp/basis/: BigBang.cpp  FontBrowser.cpp  Gallery.cpp  Pasteboard.cpp  argument.cpp  colorspace.cpp  diffusion.cpp  diffusion.hpp  game.cpp  game.hpp  game_of_life.cpp  game_of_life.hpp  geometry.cpp  geometry.hpp  info.rkt  paddle_ball.cpp  paddle_ball.hpp  paddleball.cpp  paddleball.hpp  paddleball_cosmos.cpp  paddleball_cosmos.hpp  paddleball_oop.cpp  paddleball_oop.hpp  paddleball_pop.cpp  paddleball_pop.hpp  paddleball_universe.cpp  rainbow.cpp  rainbow.hpp  random_walk.cpp  random_walk.hpp  rgb_blocks.cpp  rgb_blocks.hpp  self_avoid_walk.cpp  self_avoid_walk.hpp  shape.cpp  shape.hpp  shape_cosmos.cpp  shape_cosmos.hpp  shape_oop.cpp  shape_oop.hpp  (+7 more)
cpp/digitama/: bang.cpp  bang.hpp  gallery.cpp  gallery.hpp  game.cpp  game.hpp  geometry.cpp  (+4 more)
(+419 files in other folders)
